syntax = "proto3";

package NothingRpcApi;

option csharp_namespace = "NothingRpcApi.IntegrationTests.Dtos";

// Данные для создания моде
message CreateNothingModelDto
{
  // Имя модели
  string Name = 1;
}