syntax = "proto3";

package NothingRpcApi;

option csharp_namespace = "NothingRpcApi.IntegrationTests.Dtos";

// Данные модели
message NothingModelDto
{
  // Идентификатор модели
  int32 Id = 1;

  // Имя модели
  string Name = 2;
}